; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistxlog.c_gistXLogPageDelete.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gist/extr_gistxlog.c_gistXLogPageDelete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@SizeOfGistxlogPageDelete = common dso_local global i32 0, align 4
@REGBUF_STANDARD = common dso_local global i32 0, align 4
@RM_GIST_ID = common dso_local global i32 0, align 4
@XLOG_GIST_PAGE_DELETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gistXLogPageDelete(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_2__, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* %8, align 4
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = call i32 (...) @XLogBeginInsert()
  %16 = bitcast %struct.TYPE_2__* %9 to i8*
  %17 = load i32, i32* @SizeOfGistxlogPageDelete, align 4
  %18 = call i32 @XLogRegisterData(i8* %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @REGBUF_STANDARD, align 4
  %21 = call i32 @XLogRegisterBuffer(i32 0, i32 %19, i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @REGBUF_STANDARD, align 4
  %24 = call i32 @XLogRegisterBuffer(i32 1, i32 %22, i32 %23)
  %25 = load i32, i32* @RM_GIST_ID, align 4
  %26 = load i32, i32* @XLOG_GIST_PAGE_DELETE, align 4
  %27 = call i32 @XLogInsert(i32 %25, i32 %26)
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %10, align 4
  ret i32 %28
}

declare dso_local i32 @XLogBeginInsert(...) #1

declare dso_local i32 @XLogRegisterData(i8*, i32) #1

declare dso_local i32 @XLogRegisterBuffer(i32, i32, i32) #1

declare dso_local i32 @XLogInsert(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
